[skip] Add in-game authentication (#61)
* add In-Game Authentication

* add small notif system to 1.8.9

that was the only part missing for that on 1.8.9, and yes it's still a little ugly.

* [skip] update german translation

* add player heads to accounts view

* improve notifications for 1.8.9

* add missing header

* Add improvements suggested by @MochaFrappMC

- second hat layer in the Accounts view
- skin head on the button on the title screen

* fix some (small) issues

* add support for offline accounts

- only possible after at least one other account is added

- fixes bug of infinite resource reloads in 1.16 versions

- update mappings
- update qsl

* cleanup code

* include necessary fapi modules

- on 1.16 versions
- fix some more bugs

* update Changelog

* use correct method naming on 1.16.5

* fix more bugs

- thanks to MonstoBusta for reporting some of these

* fix running 1.16 with java 8

(i hope these were all things that aren't java 8 syntax, it doesn't crash anymore)

* fix.. more issues

-  including a StackOverflowError reported by decobra
- there are still some bugs in here that should be fixed

* minimize a small shading issue

* fix scaling issues when toggling fullscreen

* fix speedHud value

* [skip] sort translations

* [skip] remove duplicate options

* Update fr_fr.json (#62)

---------

Co-authored-by: CornetPanique86 <80220423+CornetPanique86@users.noreply.github.com>